// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a correct snapshot for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    5
     
    expenses
     totalling 
    $1,509.32
  </h1>
</div>
`;

exports[`should render a correct snapshot for one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
